# ai-test-pilot

./: .env.test  .gitignore  docker-compose.test.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2025-06-12_init.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  projects.py  requirements.py  test_points.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  response.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: project.py  requirement.py  test_point.py  user.py
backend/app/schemas/: __init__.py  common.py  project.py  requirement.py  test_point.py  user.py
backend/app/services/: project_service.py  requirement_service.py  test_point_service.py  user_service.py
backend/app/utils/: file_handler.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: full-flow.spec.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  router.tsx  types.ts
frontend/src/api/: auth.ts  http.ts  project.ts  testPoint.ts
frontend/src/components/: AppBreadcrumb.tsx  AppHeader.tsx  AppSider.tsx  GlobalErrorBoundary.tsx  LoadingFallback.tsx  VirtualTable.tsx
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: Forbidden.tsx  NotFound.tsx
frontend/src/router/: guards.tsx
frontend/src/stores/: authStore.ts  configStore.ts  (+1 more)
(+12 files in other folders)
